
syntax = "proto3";

option java_multiple_files = true;
option java_package = "seed";
option java_outer_classname = "AccountProto";

service AccountService {
  rpc CreateAccount(CreateAccountRequest) returns (CreateAccountResponse) {}
  
  rpc CloseAccount(CloseAccountRequest) returns (CloseAccountResponse) {}
  
  // named GetInfo instead of just Get because it also returns the balance
  rpc GetInfo(GetAccountInfoRequest) returns (GetAccountInfoResponse) {}
}

enum AccountStatus {
  OPEN = 0;
  CLOSED = 1;
}

message Account {
  int64 id = 1;
  AccountStatus status = 2;
  string name = 3;
  string address = 4;
  string ssn = 5;
}

message CreateAccountRequest {
  Account account = 1;
}

message CreateAccountResponse {
  int64 id = 1;
  bool success = 2;
  repeated string errors = 3;
}

message CloseAccountRequest {
  int64 id = 1;
}

message CloseAccountResponse {
  bool success = 1;
  repeated string errors = 2;
}

message GetAccountInfoRequest {
  int64 accountId = 1;
}

message GetAccountInfoResponse {
  Account account = 1;
  int64 balanceInCents = 2;
}
